@@ -1,5 +1,13 @@
 2019-08-30  Jason Merrill  <jason@redhat.com>
 
+	Add source location to TRAIT_EXPR.
+	* cp-tree.h (TRAIT_EXPR_LOCATION): New.
+	(struct tree_trait_expr): Add locus field.
+	* parser.c (cp_parser_trait_expr): Pass trait_loc down.
+	* pt.c (tsubst_copy_and_build) [TRAIT_EXPR]: Likewise.
+	* semantics.c (finish_trait_expr): Add location parm.
+	* tree.c (cp_expr_location): Handle TRAIT_EXPR.
+
 	* pt.c (tsubst_argument_pack): Factor out of tsubst_template_args.
 	* constraint.cc (tsubst_parameter_mapping): Use it.
 
